--- a/仿京东首页_静态/css/base.css
+++ b/仿京东首页_静态/css/base.css
@@ -9,6 +9,14 @@
 .fr {
     float: right;
 }
+a {    /*链接公共类*/
+    text-decoration: none;  /*取消下划线*/
+    font-size: 12px;
+    color: #999;
+}
+a:hover {
+    color: #c81623
+}
 ul {
     list-style: none;
     margin: 0;
@@ -17,7 +25,23 @@ ul {
 body {  /*整体背景色调*/
     background-color: #f0f3ef;
 }
-header {  /*header部分*/
+.f10 {  
+    color: #f10215!important;
+}
+
+@font-face { /*声明字体*/
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?nwp7dl');
+    src:  url('../fonts/icomoon.eot?nwp7dl#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?nwp7dl') format('truetype'),
+      url('../fonts/icomoon.woff?nwp7dl') format('woff'),
+      url('../fonts/icomoon.svg?nwp7dl#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+/*header部分*/
+header {  
     height: 80px;
     background-color: #1686f6;
 }
@@ -25,15 +49,38 @@ header {  /*header部分*/
 /* 快速导航栏 begin	 */
 .shortcut {
     background-color: #e3e4e5;
+    height: 30px;
     line-height: 30px;
     border-bottom: 2px solid #ddd;
     font-size: 12px;
-    color: #666;
+    color: #999;
 }
 .city {  /*北京外边距*/
     margin-left: 200px;
 }
+.shortcut li {
+    float: left;
+}
+.shortcut i {
+    font-family: "icomoon";
+    font-style: normal;
+    color: #ccc;
+}
+.space {   /*小竖线的样式*/
+    width: 1px;
+    height: 10px;
+    background-color: #ccc;
+    margin: 10px 12px 0;  /*上10px 左右12px 下0*/
+}
+.mobile {
+    position: relative;
 
+}
+.mobile img {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
 /* 快速导航栏 over	 */
 
 
