--- a/仿京东首页_静态/css/base.css
+++ b/仿京东首页_静态/css/base.css
@@ -17,11 +17,13 @@ a {    /*链接公共类*/
 a:hover {
     color: #c81623
 }
-* {
+blockquote,body,button,dd,dl,dt,
+fieldset,form,h1,h2,h3,h4,h5,h6,
+hr,input,legend,li,ol,p,pre,td,textarea,th,ul {
     margin: 0;
     padding: 0;
 }
-input,button {
+input, button {
     border: 0;
     outline: none;  /*取消轮廓边框*/
 }
@@ -67,7 +69,7 @@ header {
 .shortcut li {
     float: left;
 }
-.shortcut i {
+.shortcut i {   /*引用字体*/
     font-family: "icomoon";
     font-style: normal;
     color: #ccc;
@@ -108,29 +110,100 @@ header {
     height: 170px;
     background: url(../images/logo.png) no-repeat;
 }
-
+/*搜索框*/
 .form {
     width: 550px;
     height: 35px;
-    background-color: pink;
     position: absolute;
     top: 25px;
     left: 320px;
 }
-/*
+
 .form input {
-    width: 500px;
+    width: 495px;
     height: 33px;
-    background-color: skyblue;
     border: 1px solid #f10215;
     float: left;
+    font-size: 14px;
+    color: #989898;
+    padding-left: 3px;
 }
+
 .form button {
     width: 50px;
     height: 35px;
     background-color: #f10215;
     float: left;
-} */
+} 
+.form button i {   /*引用字体*/
+    font-family: "icomoon";
+    font-style: normal;
+    color: #fff;
+}
 
-
-
+/*购物车*/
+.shopCar {
+    width: 188px;
+    height: 34px;
+    line-height: 34px;
+    border: 0.5px solid #ccc; 
+    position: absolute;
+    top: 0;
+    right: 0;
+    top: 25px;
+    right: 95px;
+    background-color: #fff;
+    text-align: center;
+    color: #f10215;
+}
+.shopCar i {   /*购物车小图标*/
+    font-family: "icomoon";
+    font-style: normal;
+    margin-right: 6px;
+}
+.shopCar span {
+    width: 15px;
+    height: 15px;
+    background-color: #f10215;
+    border-radius: 50%;
+    position: absolute;  /*加了绝对定位的行内元素不用转换，则可以直接给高度和宽度*/
+    top: 5px;
+    left: 140px;
+    color: #fff;
+    line-height: 15px;
+    font-size: 12px;
+    padding: 1px;
+}
+/*关键词模块*/
+.hotwords {
+    position: absolute;
+    top: 65px;
+    left: 320px;
+    width: 550px;
+    height: 20px;
+    line-height: 20px;
+}
+.hotwords a {
+    float: left;
+    margin-right: 10px;
+}
+/*小导航模块*/
+.navitems {
+    width: 770px;
+    height: 40px;
+    position: absolute;
+    bottom: 0;
+    left: 200px;
+    line-height: 40px;   /*居中对齐*/
+}
+.navitems li {
+    float: left;
+    margin-left: 30px;
+}
+.navitems li a {
+    font-size: 14px;
+    color: #333;
+}
+.navitems li a:hover {
+    color: #f10215;
+}
