--- a/1.仿京东首页_静态/css/base.css
+++ b/1.仿京东首页_静态/css/base.css
@@ -2,57 +2,68 @@
 img {
     vertical-align: top;
 }
-.w {  /*版心部分*/
-    width: 1190px;   /*版心大小*/
+
+.w { /*版心部分*/
+    width: 1190px; /*版心大小*/
     margin: 0 auto;
 }
-.fl {  /*浮动的公共类*/
+
+.fl { /*浮动的公共类*/
     float: left;
 }
+
 .fr {
     float: right;
 }
-a {    /*链接公共类*/
-    text-decoration: none;  /*取消下划线*/
+
+a { /*链接公共类*/
+    text-decoration: none; /*取消下划线*/
     font-size: 12px;
     color: #999;
 }
+
 a:hover {
     color: #c81623
 }
-blockquote,body,button,dd,dl,dt,
-fieldset,form,h1,h2,h3,h4,h5,h6,
-hr,input,legend,li,ol,p,pre,td,textarea,th,ul {
+
+blockquote, body, button, dd, dl, dt,
+fieldset, form, h1, h2, h3, h4, h5, h6,
+hr, input, legend, li, ol, p, pre, td, textarea, th, ul {
     margin: 0;
     padding: 0;
 }
+
 input, button {
     border: 0;
-    outline: none;  /*取消轮廓边框*/
+    outline: none; /*取消轮廓边框*/
 }
+
 ul {
     list-style: none;
 }
-body {  /*整体背景色调*/
+
+body { /*整体背景色调*/
     background-color: #f0f3ef;
 }
-.f10 {  
-    color: #f10215!important;
+
+.f10 {
+    color: #f10215 !important;
 }
 
-@font-face { /*声明字体*/
+@font-face {
+    /*声明字体*/
     font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?nwp7dl');
-    src:  url('../fonts/icomoon.eot?nwp7dl#iefix') format('embedded-opentype'),
-      url('../fonts/icomoon.ttf?nwp7dl') format('truetype'),
-      url('../fonts/icomoon.woff?nwp7dl') format('woff'),
-      url('../fonts/icomoon.svg?nwp7dl#icomoon') format('svg');
+    src: url('../fonts/icomoon.eot?nwp7dl');
+    src: url('../fonts/icomoon.eot?nwp7dl#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?nwp7dl') format('truetype'),
+    url('../fonts/icomoon.woff?nwp7dl') format('woff'),
+    url('../fonts/icomoon.svg?nwp7dl#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
-  }
+}
 
 /*header部分*/
-header {  
+header {
     height: 80px;
     background-color: #1686f6;
 }
@@ -66,27 +77,33 @@ header {
     font-size: 12px;
     color: #999;
 }
-.city {  /*北京外边距*/
+
+.city { /*北京外边距*/
     margin-left: 200px;
 }
+
 .shortcut li {
     float: left;
 }
-.shortcut i {   /*引用字体*/
+
+.shortcut i { /*引用字体*/
     font-family: "icomoon";
     font-style: normal;
     color: #ccc;
 }
-.space {   /*小竖线的样式*/
+
+.space { /*小竖线的样式*/
     width: 1px;
     height: 10px;
     background-color: #ccc;
-    margin: 10px 12px 0;  /*上10px 左右12px 下0*/
+    margin: 10px 12px 0; /*上10px 左右12px 下0*/
 }
+
 .mobile {
     position: relative;
 
 }
+
 .mobile img {
     position: absolute;
     left: -8px;
@@ -94,6 +111,7 @@ header {
     padding: 2px;
     border: 1px solid #ccc;
 }
+
 /* 快速导航栏 over	 */
 
 /* 中间大部分 */
@@ -101,18 +119,21 @@ header {
     height: 140px;
     position: relative;
 }
+
 .logo {
     position: absolute;
     top: -30px;
     left: 0;
-    box-shadow: 0 -12px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 -12px 10px rgba(0, 0, 0, 0.2);
 }
+
 .logo a {
     display: block;
     width: 190px;
     height: 170px;
     background: url(../images/logo.png) no-repeat;
 }
+
 /*搜索框*/
 .form {
     width: 550px;
@@ -137,8 +158,9 @@ header {
     height: 35px;
     background-color: #f10215;
     float: left;
-} 
-.form button i {   /*引用字体*/
+}
+
+.form button i { /*引用字体*/
     font-family: "icomoon";
     font-style: normal;
     color: #fff;
@@ -149,7 +171,7 @@ header {
     width: 188px;
     height: 34px;
     line-height: 34px;
-    border: 0.5px solid #ccc; 
+    border: 0.5px solid #ccc;
     position: absolute;
     top: 0;
     right: 0;
@@ -159,17 +181,19 @@ header {
     text-align: center;
     color: #f10215;
 }
-.shopCar i {   /*购物车小图标*/
+
+.shopCar i { /*购物车小图标*/
     font-family: "icomoon";
     font-style: normal;
     margin-right: 6px;
 }
+
 .shopCar span {
     width: 15px;
     height: 15px;
     background-color: #f10215;
     border-radius: 50%;
-    position: absolute;  /*加了绝对定位的行内元素不用转换，则可以直接给高度和宽度*/
+    position: absolute; /*加了绝对定位的行内元素不用转换，则可以直接给高度和宽度*/
     top: 5px;
     left: 140px;
     color: #fff;
@@ -177,6 +201,7 @@ header {
     font-size: 12px;
     padding: 1px;
 }
+
 /*关键词模块*/
 .hotwords {
     position: absolute;
@@ -186,10 +211,12 @@ header {
     height: 20px;
     line-height: 20px;
 }
+
 .hotwords a {
     float: left;
     margin-right: 10px;
 }
+
 /*小导航模块*/
 .navitems {
     width: 800px;
@@ -197,24 +224,29 @@ header {
     position: absolute;
     bottom: 0;
     left: 200px;
-    line-height: 40px;   /*居中对齐*/
+    line-height: 40px; /*居中对齐*/
 }
+
 .navitems li {
     float: left;
     margin-left: 30px;
 }
+
 .navitems li a {
     font-size: 14px;
     color: #333;
 }
+
 .navitems li a:hover {
     color: #f10215;
 }
-.navitems .space {  /*小竖线样式*/
+
+.navitems .space { /*小竖线样式*/
     margin-top: 15px;
     margin-left: 15px;
     margin-right: -15px;
 }
+
 /* 超级日 */
 .super {
     position: absolute;
@@ -230,11 +262,13 @@ footer {
     height: 568px;
     /* background-color: #EAEAEA; */
 }
+
 .service {
-    padding: 30px 0;  /*设置上下padding 自然垂直居中 宽度自然撑开*/
+    padding: 30px 0; /*设置上下padding 自然垂直居中 宽度自然撑开*/
     border-bottom: 1px solid #DEDEDE;
-    overflow: hidden;  /*清除浮动 因为下面插入了浮动的图片*/ 
+    overflow: hidden; /*清除浮动 因为下面插入了浮动的图片*/
 }
+
 .service ul li {
     width: 297px;
     height: 42px;
@@ -242,6 +276,7 @@ footer {
     line-height: 42px;
     float: left;
 }
+
 .service li h5 {
     position: absolute;
     top: 0;
@@ -252,23 +287,28 @@ footer {
     background-position: 0 -192px;
     text-indent: -999em;
 }
+
 .service li:nth-child(2) h5 {
     background: url(../images/sprite.footer.png) no-repeat;
     background-position: -41px -192px;
 }
+
 .service li:nth-child(3) h5 {
     background: url(../images/sprite.footer.png) no-repeat;
     background-position: -82px -192px;
 }
+
 .service li:nth-child(4) h5 {
     background: url(../images/sprite.footer.png) no-repeat;
     background-position: -123px -192px;
 }
+
 .service li p {
     font-weight: 700;
     margin-left: 82px;
     font-size: 18px;
 }
+
 /* 帮助模块 */
 .help {
     height: 200px;
@@ -277,14 +317,15 @@ footer {
     box-sizing: border-box;
 
 }
+
 .help dl {
-    width: 192px;  /*宽度剩余法*/
+    width: 192px; /*宽度剩余法*/
     float: left;
     color: #666;
 
-
 }
-.help dt {  /*高度剩余法*/
+
+.help dt { /*高度剩余法*/
     height: 22px;
     margin-bottom: 5px;
     font-size: 14px;
@@ -292,9 +333,11 @@ footer {
     font-weight: bold;
 
 }
+
 .help dd {
     height: 22px;
 }
+
 /*范围*/
 .coverage {
     width: 200px;
@@ -304,6 +347,7 @@ footer {
     color: #666;
 
 }
+
 .coverage h5 {
     text-align: center;
     width: 200px;
@@ -312,13 +356,15 @@ footer {
     font-size: 14px;
     line-height: 21px;
     font-weight: bold;
-} 
+}
+
 .coverage p {
     font-size: 12px;
     line-height: 18px;
     width: 180px;
     height: 53px;
 }
+
 .coverage a {
     display: block;
     width: 180px;
@@ -334,6 +380,7 @@ footer {
     font-size: 12px;
     color: #999;
 }
+
 .copyright a {
     color: #666;
 }
@@ -342,31 +389,39 @@ footer {
     margin: 0 10px;
     color: #ccc;
 }
+
 .copyright div {
     padding: 15px 0;
 }
+
 .copyright div p {
     line-height: 20px;
 }
+
 .foot-icon {
     margin: 35px 0;
 }
+
 .foot-icon a {
-    display: inline-block;    /*小技巧转换成行内块元素*/
+    display: inline-block; /*小技巧转换成行内块元素*/
     width: 103px;
     height: 32px;
     background: url(../images/sprite.footer.png) no-repeat -205px -148px;
     margin: 0 3px;
 }
+
 .foot-icon a:nth-child(2) {
     background-position: -205px -111px;
 }
+
 .foot-icon a:nth-child(3) {
     background-position: -205px -74px;
 }
+
 .foot-icon a:nth-child(4) {
     background-position: -205px -37px;
 }
+
 .foot-icon a:nth-child(5) {
     background-position: 0 -155px;
 }
